ball:parent:2022.1.1:pom
Add and/or standardize project name, description, and url.
Use ${maven.compiler.release} to specify compilation target.

info.picocli:picocli:4.6.3
org.commonmark:commonmark:0.19.0
tech.tablesaw:tablesaw:0.43.1
Jupyter Notebook Services Protocol 6.4.12

--- a/ganymede-client/pom.xml
+++ b/ganymede-client/pom.xml
@@ -23,10 +23,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <name>Ganymede Kernel Client</name>
   <groupId>ganymede</groupId>
   <artifactId>ganymede-client</artifactId>
   <packaging>jar</packaging>
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>Ganymede Kernel Client</description>
   <parent>
     <groupId>ganymede</groupId>
     <artifactId>parent</artifactId>
