--- a/jupyter-client/pom.xml
+++ b/jupyter-client/pom.xml
@@ -23,10 +23,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <name>Ganymede Jupyter Client</name>
   <groupId>ganymede</groupId>
   <artifactId>jupyter-client</artifactId>
   <packaging>jar</packaging>
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>Ganymede Jupyter Client</description>
   <parent>
     <groupId>ganymede</groupId>
     <artifactId>parent</artifactId>
