--- a/ganymede-kernel/pom.xml
+++ b/ganymede-kernel/pom.xml
@@ -75,8 +75,8 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>com.github.jknack</groupId>
-      <artifactId>handlebars</artifactId>
+      <groupId>com.samskivert</groupId>
+      <artifactId>jmustache</artifactId>
     </dependency>
     <dependency>
       <groupId>info.picocli</groupId>
