--- a/ganymede/src/main/resources/application.properties
+++ b/ganymede/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.main.banner-mode: OFF
 spring.main.headless: true
 spring.main.log-startup-info: false
 
+spring.mustache.check-template-location: false
+
 spring.output.ansi.enabled: NEVER
 
 logging.pattern.console: %clr(%-5p) %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
