--- a/pom.xml
+++ b/pom.xml
@@ -132,9 +132,9 @@
         <version>${ball-util.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.github.jknack</groupId>
-        <artifactId>handlebars</artifactId>
-        <version>4.3.0</version>
+        <groupId>com.samskivert</groupId>
+        <artifactId>jmustache</artifactId>
+        <version>1.15</version>
       </dependency>
       <dependency>
         <groupId>info.picocli</groupId>
