--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,44 @@
   </pluginRepositories>
   <profiles>
     <profile>
+      <id>javadoc-jar</id>
+      <activation>
+        <file><exists>${basedir}/src/main/java</exists></file>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>javadoc-jar</id>
+                  <goals>
+                    <goal>jar</goal>
+                  </goals>
+                  <configuration>
+                    <archive>
+                      <addMavenDescriptor>false</addMavenDescriptor>
+                      <manifestFile>/dev/null</manifestFile>
+                    </archive>
+                    <classifier>javadoc</classifier>
+                    <classesDirectory>${basedir}/..//src/main/javadoc</classesDirectory>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>jeromq-SNAPSHOT</id>
       <repositories>
         <repository>
