--- a/ganymede-notebook/pom.xml
+++ b/ganymede-notebook/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0.20220717</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <dependencies verbose="true">
