--- a/ganymede-notebook/pom.xml
+++ b/ganymede-notebook/pom.xml
@@ -23,25 +23,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ganymede</groupId>
+  <groupId>dev.hcf.ganymede</groupId>
   <artifactId>ganymede-notebook</artifactId>
   <packaging>jar</packaging>
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Ganymede Notebook API and JShell Application</description>
   <parent>
-    <groupId>ganymede</groupId>
+    <groupId>dev.hcf.ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>2.0.0.20220717</version>
+    <version>2.0.1.20220723</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <dependencies verbose="true">
     <dependency>
-      <groupId>ganymede</groupId>
+      <groupId>dev.hcf.ganymede</groupId>
       <artifactId>ganymede-client</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>ganymede</groupId>
+      <groupId>dev.hcf.ganymede</groupId>
       <artifactId>jupyter-client</artifactId>
       <version>${project.version}</version>
     </dependency>
