--- a/jupyter-client/pom.xml
+++ b/jupyter-client/pom.xml
@@ -23,15 +23,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ganymede</groupId>
+  <groupId>dev.hcf.ganymede</groupId>
   <artifactId>jupyter-client</artifactId>
   <packaging>jar</packaging>
   <name>${project.groupId}:${project.artifactId}</name>
   <description>Ganymede Jupyter Client</description>
   <parent>
-    <groupId>ganymede</groupId>
+    <groupId>dev.hcf.ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>2.0.0.20220717</version>
+    <version>2.0.1.20220723</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <properties>
