--- a/pom.xml
+++ b/pom.xml
@@ -163,9 +163,9 @@
     <notebook.services.spec>https://github.com/jupyter/notebook/raw/${notebook.services.version}/notebook/services/api/api.yaml</notebook.services.spec>
 
     <spark.version>3.1.3</spark.version>
-    <hive.version>${spark.version}</hive.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.15</scala.version>
+    <jackson.version>2.10.5</jackson.version>
     <jackson-bom.version>2.10.5.20201202</jackson-bom.version>
 
     <commonmark.version>0.19.0</commonmark.version>
@@ -174,6 +174,13 @@
 
     <ball-api.version>${ball-parent.version}</ball-api.version>
   </properties>
+  <modules>
+    <module>ganymede</module>
+    <module>ganymede-client</module>
+    <module>ganymede-kernel</module>
+    <module>ganymede-notebook</module>
+    <module>jupyter-client</module>
+  </modules>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -185,6 +192,17 @@
         <groupId>ball</groupId>
         <artifactId>ball-util</artifactId>
         <version>${ball-util.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.module</groupId>
+        <artifactId>jackson-module-kotlin</artifactId>
+        <version>${jackson.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>com.samskivert</groupId>
@@ -202,14 +220,46 @@
         <version>3.0.0</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.hive</groupId>
-        <artifactId>hive-jdbc</artifactId>
-        <version>${hive.version}</version>
+        <groupId>org.apache.maven.resolver</groupId>
+        <artifactId>maven-resolver-impl</artifactId>
+        <version>${resolverVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-sql_${scala.binary.version}</artifactId>
         <version>${spark.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>jakarta.inject</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>aopalliance-repackaged</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-reload4j</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.velocity</groupId>
@@ -267,9 +317,26 @@
         <version>1.5.3</version>
       </dependency>
       <dependency>
+        <groupId>org.jooq</groupId>
+        <artifactId>jooq</artifactId>
+        <version>${jooq.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
         <groupId>org.knowm.xchart</groupId>
         <artifactId>xchart</artifactId>
         <version>3.8.1</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.scala-lang</groupId>
@@ -280,6 +347,28 @@
         <groupId>org.scala-lang</groupId>
         <artifactId>scala-library</artifactId>
         <version>${scala.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring-framework.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jcl</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>${spring-boot.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.zeromq</groupId>
@@ -313,13 +402,24 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  <modules>
-    <module>ganymede</module>
-    <module>ganymede-client</module>
-    <module>ganymede-kernel</module>
-    <module>ganymede-notebook</module>
-    <module>jupyter-client</module>
-  </modules>
+  <dependencies verbose="true">
+    <dependency>
+      <groupId>ball</groupId>
+      <artifactId>ball-util</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-logging</artifactId>
+    </dependency>
+  </dependencies>
   <build>
     <pluginManagement>
       <plugins>
@@ -328,6 +428,10 @@
           <artifactId>ball-license-maven-plugin</artifactId>
           <configuration>
             <selections>
+              <selection>
+                <artifact>commons-el</artifact>
+                <license>Apache-2.0</license>
+              </selection>
               <selection>
                 <artifact>mysql:mysql-connector-java</artifact>
                 <license>GPL-2.0 WITH Universal-FOSS-exception-1.0</license>
@@ -364,6 +468,97 @@
             <quiet>true</quiet>
             <serialwarn>true</serialwarn>
             <show>protected</show>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <dependencies>
+            <dependency>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-maven-plugin</artifactId>
+              <version>${spring-boot.version}</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <filters>
+              <filter>
+                <artifact>org.apache.velocity:velocity-engine-core</artifact>
+                <excludes>
+                  <exclude>META-INF/maven/commons-io/**</exclude>
+                  <exclude>org/apache/velocity/shaded/**</exclude>
+                </excludes>
+              </filter>
+              <filter>
+                <artifact>org.codehaus.groovy:groovy-*</artifact>
+                <excludes>
+                  <exclude>META-INF/groovy-release-info.properties</exclude>
+                </excludes>
+              </filter>
+              <filter>
+                <artifact>org.jetbrains.kotlin:kotlin-reflect</artifact>
+                <excludes>
+                  <exclude>**/*.kotlin_module</exclude>
+                </excludes>
+              </filter>
+              <filter>
+                <artifact>org.jetbrains.kotlin:kotlin-stdlib</artifact>
+                <excludes>
+                  <exclude>**/*.kotlin_builtins</exclude>
+                </excludes>
+              </filter>
+              <filter>
+                <artifact>*:*</artifact>
+                <excludes>
+                  <exclude>META-INF/*.DSA</exclude>
+                  <exclude>META-INF/*.RSA</exclude>
+                  <exclude>META-INF/*.SF</exclude>
+                  <exclude>META-INF/DEPENDENCIES</exclude>
+                  <exclude>META-INF/MANIFEST.MF</exclude>
+                  <exclude>META-INF/README.txt</exclude>
+                  <exclude>META-INF/spring-configuration-metadata.json</exclude>
+                  <exclude>META-INF/additional-spring-configuration-metadata.json</exclude>
+                  <exclude>**/.gitkeep</exclude>
+                  <exclude>**/module-info.class</exclude>
+                </excludes>
+              </filter>
+            </filters>
+            <relocations>
+              <relocation>
+                <pattern>org.apache.velocity.shaded.commons.io</pattern>
+                <shadedPattern>org.apache.commons.io</shadedPattern>
+              </relocation>
+            </relocations>
+            <transformers>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+                <addHeader>false</addHeader>
+              </transformer>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                <manifestEntries>
+                  <Main-Class>${start-class}</Main-Class>
+                </manifestEntries>
+              </transformer>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                <resource>META-INF/sisu/javax.inject.Named</resource>
+              </transformer>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                <resource>META-INF/spring.handlers</resource>
+              </transformer>
+              <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
+                <resource>META-INF/spring.factories</resource>
+              </transformer>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                <resource>META-INF/spring.schemas</resource>
+              </transformer>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                <resource>META-INF/spring.tooling</resource>
+              </transformer>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer">
+                <resource>META-INF/web-fragment.xml</resource>
+              </transformer>
+            </transformers>
           </configuration>
         </plugin>
       </plugins>
