Added com.arthenica:smart-exception-logback to runtime.

--- a/ganymede/pom.xml
+++ b/ganymede/pom.xml
@@ -80,6 +80,16 @@
     </dependency>
     <!-- Ganymede Runtime -->
     <dependency>
+      <groupId>com.arthenica</groupId>
+      <artifactId>smart-exception-java9</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.arthenica</groupId>
+      <artifactId>smart-exception-logback</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <scope>runtime</scope>
