--- a/ganymede-client/pom.xml
+++ b/ganymede-client/pom.xml
@@ -39,12 +39,20 @@
   </properties>
   <dependencies verbose="true">
     <dependency>
+      <groupId>ball</groupId>
+      <artifactId>ball-util</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
     </dependency>
   </dependencies>
   <build>
