--- a/ganymede-kernel/pom.xml
+++ b/ganymede-kernel/pom.xml
@@ -217,7 +217,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>ball</groupId>
+        <groupId>dev.hcf.ball</groupId>
         <artifactId>ball-javadoc-maven-plugin</artifactId>
         <executions>
           <execution>
