--- a/ganymede-kernel/pom.xml
+++ b/ganymede-kernel/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>dev.hcf.ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2.20221025</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <properties>
