--- a/pom.xml
+++ b/pom.xml
@@ -132,11 +132,11 @@
     <notebook.services.version>v6.5.2</notebook.services.version>
     <notebook.services.spec>https://github.com/jupyter/notebook/raw/${notebook.services.version}/notebook/services/api/api.yaml</notebook.services.spec>
 
-    <spark.version>3.1.3</spark.version>
+    <spark.version>3.3.1</spark.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.15</scala.version>
-    <jackson.version>2.10.5</jackson.version>
-    <jackson-bom.version>2.10.5.20201202</jackson-bom.version>
+    <!-- <jackson-bom.version>2.13.4.20221013</jackson-bom.version> -->
+    <jackson.version>2.13.4</jackson.version>
 
     <commonmark.version>0.21.0</commonmark.version>
     <jeromq.version>0.5.2</jeromq.version>
