--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
   <parent>
     <groupId>dev.hcf.ball</groupId>
     <artifactId>parent</artifactId>
-    <version>2022.1.2</version>
-    <relativePath/>
+    <version>2022.2.0-SNAPSHOT</version>
+    <relativePath>../ball/parent/pom.xml</relativePath>
   </parent>
   <organization>
     <name><![CDATA[<a href="mailto:ball@hcf.dev">Allen D. Ball</a>]]></name>
