--- a/ganymede-kernel/pom.xml
+++ b/ganymede-kernel/pom.xml
@@ -57,6 +57,16 @@
       <artifactId>jackson-module-kotlin</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>aopalliance</groupId>
+          <artifactId>aopalliance</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>com.samskivert</groupId>
       <artifactId>jmustache</artifactId>
     </dependency>
