--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>com.google.inject</groupId>
+        <artifactId>guice</artifactId>
+        <version>5.1.0</version>
+      </dependency>
+      <dependency>
         <groupId>com.samskivert</groupId>
         <artifactId>jmustache</artifactId>
         <version>1.15</version>
