--- a/ganymede/pom.xml
+++ b/ganymede/pom.xml
@@ -3,7 +3,7 @@
   ##########################################################################
   Ganymede
   %%
-  Copyright (C) 2021, 2022 Allen D. Ball
+  Copyright (C) 2021 - 2023 Allen D. Ball
   %%
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -31,7 +31,7 @@
   <parent>
     <groupId>dev.hcf.ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>2.1.1.20221231</version>
+    <version>2.1.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <properties>
@@ -95,8 +95,8 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
